---------------------------------------------------------------------------------------------------
Version: 2.3.8
Date: ????
  Bugfixes:
    - Fixed being a bit mean to Po in the changelog.
---------------------------------------------------------------------------------------------------
Version: 2.3.7
Date: 2025-06-09
  Changes:
    - Decreased selection priority of previews. Other entities should be selected first if they overlap with previews.
---------------------------------------------------------------------------------------------------
Version: 2.3.6
Date: 2025-06-06
  Bugfixes:
    - Editor ui no longer jumps around when navigating between stages.
---------------------------------------------------------------------------------------------------
Version: 2.3.5
Date: 2025-06-06
  Bugfixes:
    - Fixed that rotated assembler with fluid input would not be handled properly in some cases.
    - Fixed that some entities may not be updated correctly after running sync map gen settings.
    - Add more checks against possible crashes with StageSelector.
---------------------------------------------------------------------------------------------------
Version: 2.3.3
Date: 2025-05-31
  Bugfixes:
    - Fix possible soft crash with StageSelector in some cases.
---------------------------------------------------------------------------------------------------
Version: 2.3.2
Date: 2025-04-12
  Bugfixes:
    - Fixed that mirroring/flipping assembling machines didn't work in some cases.
---------------------------------------------------------------------------------------------------
Version: 2.3.1
Date: 2025-03-06
  Bugfixes:
    - Fixed "setting map settings from set seed" did not set the correct seed.
---------------------------------------------------------------------------------------------------
Version: 2.3.0
Date: 2025-02-23
  Features: