@@ -2,6 +2,7 @@
 Version: 2.3.8
 Date: ????
   Bugfixes:
+    - Fixed that you couldn't set a recipe with a different quality on an assembling machine... This should have been fixed earlier, sorry!
     - Fixed being a bit mean to Po in the changelog.
 ---------------------------------------------------------------------------------------------------
 Version: 2.3.7
